<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_couples_activity"
    android:orientation="vertical" >

    <include layout="@layout/topbar" />

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/bless_name_label"
        android:textColor="@color/black_color"
        android:textSize="@dimen/text_size_18"/>
    <EditText 
        android:id="@+id/edit_nick_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/bless_name_hint"
        android:maxLength="10"
        android:padding="5dp"
        android:singleLine="true"
        android:background="@drawable/bless_edit"/>
    <TextView 
        android:id="@+id/text_content_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/bless_content_label"
        android:textColor="@color/black_color"
        android:textSize="@dimen/text_size_18"/>
    <EditText 
        android:id="@+id/edit_bless_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bless_content_hint"
        android:maxLength="140"
        android:gravity="top"
        android:padding="5dp"
        android:lines="5"
        android:layout_margin="10dp"
        android:background="@drawable/bless_edit"/>

</LinearLayout>