<?xml version="1.0" encoding="utf-8"?>
<!-- 登陆注册页面 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/login_bg"
    android:orientation="vertical" >

    <include layout="@layout/topbar" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ztop_bar_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_two_edit"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/account_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_20" />

                <EditText
                    android:id="@+id/edt_login_username"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/transparent"
                    android:hint="手机号/邮箱/用户名"
                    android:singleLine="true"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_20" />

                <EditText
                    android:id="@+id/edt_login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/transparent"
                    android:hint="6-20位字符"
                    android:singleLine="true"
                    android:padding="5dp"
                    android:password="true" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button_bg_selecter"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20" />

        <Button
            android:id="@+id/btn_login_register"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button_bg_selecter"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/btn_login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/blue_deep"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>
        
        <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        >
        
        <View 
            android:layout_width="0dp"
            android:layout_weight="1"
        	android:layout_height="1dp"
        	android:background="@color/light_gray"
            />
        
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="2"
        	android:layout_height="wrap_content"
        	android:textSize="@dimen/text_size_16"
        	android:textColor="@color/light_gray"
        	android:gravity="center"
        	android:text="用其它账号登入"
            />
        
        <View 
            android:layout_width="0dp"
            android:layout_weight="1"
        	android:layout_height="1dp"
        	android:background="@color/light_gray"
            />
        
    </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
        android:orientation="horizontal" 
         android:visibility="gone"
        >

        <LinearLayout 
            android:id="@+id/layout_login_sina"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/login_leftbt_bg_selecter"
            android:gravity="center"
            android:orientation="horizontal"
            >
        
            <ImageView 
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:src="@drawable/login_sina_icon"
        		android:layout_marginBottom="2dp"
                />
            
        <TextView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="新浪微博"
            android:layout_marginLeft="5dp"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_20" />
		</LinearLayout>
        
        <LinearLayout 
            android:id="@+id/layout_login_qq"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/login_rightbt_bg_selecter"
            android:gravity="center"
            android:orientation="horizontal"
            >
        
            <ImageView 
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:src="@drawable/login_qq_icon"
                />
            
        <TextView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:text="qq微博"
            android:layout_marginLeft="5dp"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_20" />
		</LinearLayout>
    </LinearLayout>

</RelativeLayout>